k8s/06-odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: odoo
  labels:
    app: odoo
spec:
  type: LoadBalancer
  selector:
    app: odoo
  ports:
    - port: 80
      targetPort: 8069
      protocol: TCP
      name: http
    - port: 8072
      targetPort: 8072
      protocol: TCP
      name: longpolling
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
